2011-07-30  Eric Wasylishen  <ewasylishen@gmail.com>
	* Source/win32/WIN32Server.m (-resolutionForScreen:):
	Scale the result by 0.75 so the Windows default of 96 DPI is
	mapped to the GNUstep default of 72 DPI. While this sounds wrong,
	72 and 96 are just "virtual" DPI's; both mean 1 point = 1 pixel,
	so it's actually the right thing to do.
	* Source/x11/XGServerWindow.m (-resolutionForScreen:):
	Comment out the implementation and just return 72 for now,
	because I'm not sure if we can trust the value the X server
	gives us.

	NOTE: Currently -gui ignores these methods and only looks at the
	GSScaleFactor user default. I'm going to make -gui use the server
	values now, because it's safe to do so on Windows (the system
	DPI is set by the user, and affects all applications.)

	NOTE: We might consider refactoring these methods to be called
	scaleFactorForScreen: to make it clearer what they do.

2011-07-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/winlib/WIN32GState.m (GSCreateBitmap): Add support for
	(8 bit-greyscale, 8-bit alpha) format. This fixes various default
	images not showing (menu arrows, scroller arrows, etc.)

2011-07-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerWindow.m: Add Xcursor support (for RGBA
	imagecursor support.) configure test is still TODO, so it isn't
	compiled in at the moment.

2011-07-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/x11/XGGeneric.h
	* Source/x11/XGServerWindow.m: Add new netwm window state atoms

2011-07-14 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m: Add include needed for Cygwin.

2011-07-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/cairo/CairoGState.h:
	* Source/cairo/CairoGState.m: Remove most of the rounding code and
	implementation of DPSstrokeadjust.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/XGCairoSurface.m (-contentsOfScreen:inRect:):
	Use the passed rect properly.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>
